--- a/index.html
+++ b/index.html
@@ -3,19 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ball Game</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Restaurant Management</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <h1 id="nshuti">Nshuti Ball Game</h1><br>
-    <div class="game-container">
-        <canvas id="gameCanvas"></canvas>
-        <div class="info">
-            <h1>Score: <span id="score">0</span></h1>
-            <button id="pausePlayBtn">Pause</button>
+    <header>
+        <div class="nav-right">
+            <div class="header-content">
+                <div>
+                    <form action="#" method="POST">
+                        <select id="currency" name="currency">
+                            <option value="RWF">RWF</option>
+                            <option value="USD">USD</option>
+                            <option value="EUR">EUR</option>
+                        </select>
+                    </form>
+                </div>
+                <h1 class="demo">Restaurant Management System</h1>
+                <div class="nav-left">
+                    <a href="#">Sign In</a>
+                    <a href="#">Create Account</a>
+                </div>
+            </div>
         </div>
-    </div>
+        <div class="secondary-nav">
+            <div>
+                <ul>
+                    <li><a href="#menu">Menu</a></li>
+                    <li><a href="#orders">Orders</a></li>
+                    <li><a href="#tables">Tables</a></li>
+                    <li><a href="#reservations">Reservations</a></li>
+                    <li><a href="#billing">Billing</a></li>
+                    <li><a href="#reporting">Reporting</a></li>
+                    <li><a href="#inventory">Inventory</a></li>
+                    <li><a href="#multi-restaurants">Multi Restaurants</a></li>
+                </ul>
+            </div> 
+        <div>
+    </header>
+    <!-- <header>
+        <h1>Restaurant Management System</h1>
+        <nav>
+            <ul>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="#orders">Orders</a></li>
+                <li><a href="#tables">Tables</a></li>
+                <li><a href="#reservations">Reservations</a></li>
+                <li><a href="#billing">Billing</a></li>
+                <li><a href="#reporting">Reporting</a></li>
+                <li><a href="#inventory">Inventory</a></li>
+                <li><a href="#multi-restaurants">Multi Restaurants</a></li>
+            </ul>
+        </nav>
+    </header> -->
+    
+    <main>
+        <section id="menu">
+            <h2>Menu Management</h2>
+            <!-- Menu management content -->
+        </section>
 
-    <script src="script.js"></script>
+        <section id="orders">
+            <h2>Order Processing</h2>
+            <!-- Order processing content -->
+        </section>
+
+        <section id="tables">
+            <h2>Table Management</h2>
+            <!-- Table management content -->
+        </section>
+
+        <section id="reservations">
+            <h2>Reservation System</h2>
+            <!-- Reservation system content -->
+        </section>
+
+        <section id="billing">
+            <h2>Billing</h2>
+            <!-- Billing content -->
+        </section>
+
+        <section id="reporting">
+            <h2>Reporting</h2>
+            <!-- Reporting content -->
+        </section>
+
+        <section id="inventory">
+            <h2>Inventory Control</h2>
+            <!-- Inventory control content -->
+        </section>
+
+        <section id="multi-restaurants">
+            <h2>Multi Restaurants Support</h2>
+            <!-- Multi Restaurants support content -->
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Restaurant Management System</p>
+    </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
