--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Pokémon Search App</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- 1. Search input -->
+    <input id="search-input" type="text" placeholder="Search Pokémon by name or id" required/>
+
+    <!-- 2. Search button -->
+    <button id="search-button">Search</button>
+
+    <!-- Container for Pokémon details -->
+    <div id="pokemon-info">
+      <!-- 3. Element for Pokémon name -->
+      <h2 id="pokemon-name"></h2>
+      <!-- 4. Element for Pokémon id -->
+      <p id="pokemon-id"></p>
+      <!-- 5. Element for weight -->
+      <p id="weight"></p>
+      <!-- 6. Element for height -->
+      <p id="height"></p>
+      <!-- 7. Element for types -->
+      <div id="types"></div>
+      <!-- 8. Element for hp -->
+      <p id="hp"></p>
+      <!-- 9. Element for attack -->
+      <p id="attack"></p>
+      <!-- 10. Element for defense -->
+      <p id="defense"></p>
+      <!-- 11. Element for special-attack -->
+      <p id="special-attack"></p>
+      <!-- 12. Element for special-defense -->
+      <p id="special-defense"></p>
+      <!-- 13. Element for speed -->
+      <p id="speed"></p>
+    </div>
+
+    <!-- Container for the sprite image -->
+    <div id="sprite-container"></div>
+
+    <script src="script.js"></script>
   </body>
 </html>
