--- a/index.html
+++ b/index.html
@@ -1,46 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Pokémon Search App</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <!-- 1. Search input -->
-    <input id="search-input" type="text" placeholder="Search Pokémon by name or id" required/>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="wheel">
+        <span class="line"></span>
+        <span class="line"></span>
+        <span class="line"></span>
+        <span class="line"></span>
+        <span class="line"></span>
+        <span class="line"></span>
 
-    <!-- 2. Search button -->
-    <button id="search-button">Search</button>
-
-    <!-- Container for Pokémon details -->
-    <div id="pokemon-info">
-      <!-- 3. Element for Pokémon name -->
-      <h2 id="pokemon-name"></h2>
-      <!-- 4. Element for Pokémon id -->
-      <p id="pokemon-id"></p>
-      <!-- 5. Element for weight -->
-      <p id="weight"></p>
-      <!-- 6. Element for height -->
-      <p id="height"></p>
-      <!-- 7. Element for types -->
-      <div id="types"></div>
-      <!-- 8. Element for hp -->
-      <p id="hp"></p>
-      <!-- 9. Element for attack -->
-      <p id="attack"></p>
-      <!-- 10. Element for defense -->
-      <p id="defense"></p>
-      <!-- 11. Element for special-attack -->
-      <p id="special-attack"></p>
-      <!-- 12. Element for special-defense -->
-      <p id="special-defense"></p>
-      <!-- 13. Element for speed -->
-      <p id="speed"></p>
+        <div class="cabin"></div>
+        <div class="cabin"></div>
+        <div class="cabin"></div>
+        <div class="cabin"></div>
+        <div class="cabin"></div>
+        <div class="cabin"></div>
     </div>
-
-    <!-- Container for the sprite image -->
-    <div id="sprite-container"></div>
-
-    <script src="script.js"></script>
-  </body>
+</body>
 </html>
